@@ -1,8 +1,8 @@
-﻿using Uaine.Objects.Primitives;
+﻿using Uaine.Objects.Primitives.ID;
 
 namespace Uaine.Objects.Game
 {
-    public class Player : IDObject
+    public class Player : ID32
     {
         Character playerChar;
         public Player(Character playercharacter, int id) : base(id)
