@@ -1,0 +1,13 @@
+﻿
+namespace Uaine.Objects.Primitives.ID
+{
+    public class ID16
+    {
+        protected short _id;
+        public short ID { get => _id; }
+        public ID16(short id)
+        {
+            _id = id;
+        }
+    }
+}
