@@ -1,0 +1,13 @@
+﻿
+namespace Uaine.Objects.Primitives.ID
+{
+    public class ID32
+    {
+        protected int _id;
+        public int ID { get => _id; }
+        public ID32(int id)
+        {
+            _id = id;
+        }
+    }
+}
