@@ -1,6 +1,9 @@
 --1.4--
 Character speed stat
 item stacks
+IDObject renamed to ID32
+ID64 introduced, with 64 bit integer
+ID16 bit IDs
 
 --1.3.1--
 Bugfix of constructors for maps
